Really fix lab sidebar, ensure alert messages are positioned well on mobile

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -93,3 +93,7 @@
     }
   }
 }
+
+.stretch-nav {
+  flex-basis: 0;
+}
